# JobHunter

./: .env.example  .gitignore  README.md  TRACKER.md  pyproject.toml  requirements.txt
jobhunter/: __init__.py  __main__.py  app.py  cleanup.py  config.py  database.py  env.py  google_results.py  logger.py  normalize.py  notifier.py  report.py  retry.py  schema.py  search.py  storage.py
jobhunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jobhunter/scrapers/: __init__.py  apple.py  ashby.py  common.py  eightfold.py  greenhouse.py  lever.py  phenom.py  qualcomm.py  salesforce.py  uber.py  workable.py
pipelines/backfill/: full_rebuild.py
pipelines/entity_resolution/: candidate_selector.py  features.py  resolver.py  scoring.py
pipelines/versioning/: version_decider.py
scripts/: deploy.sh  migrate_json_to_db.py  remove_cron.sh  setup_cron.sh  validate_migration.py
storage/repositories/: jobs.py
tests/: conftest.py  test_cleanup.py  test_database.py  test_logger.py  test_report.py  test_retry.py  test_schema.py  test_scrapers.py
